# gps_trigger_optimization

./: .gitignore  CMakeLists.txt  README.md  package.xml
gtsam_experiment/: CMakeLists.txt
gtsam_experiment/include/: gps_handler.h
gtsam_experiment/src/: gps_handler.cpp  main.cpp
include/: GPS2plane.h  gps_handler.h
launch/: gps_trigger_optimization.launch
msg/: GPS_optimize.msg
src/: GPS2plane.cpp  gps_distance.cpp  gps_handler.cpp
